--- a/index.html
+++ b/index.html
@@ -3,33 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>Four Garage Racing</title>
-<img src="Four-Garage2.png" width="800">
-  <h1>Where is four garage?</h1>
-<img src="maps.jpg" width="800">
+<link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;700&display=swap" rel="stylesheet">
+<img src="Four-Garage2.png" width="500">
+
   <style>
     body {
       margin: 0;
-      font-family: TH Sarabun PSK, TH Sarabun PSK, TH Sarabun PSK;
-      background-color: #357eb7;
-      color: #ffffff;
+      font-family: 'Sarabun', sans-serif;
+      background-color: #ffb600;
+      color: #000000;
       text-align: center;
     }
     header {
-      padding: 60px 20px;
+      padding: 60px 10px;
       background: linear-gradient(135deg, #ffb600, #357eb7);
     }
     h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
+      font-size: 60px;
+      margin-bottom: 3px;
       letter-spacing: 2px;
     }
     h2 {
       font-weight: normal;
       color: #ffffff;
       margin-top: 0;
+ }
+ 
+
     }
     section {
       padding: 40px 20px;
+      margin-bottom: 3px;
     }
     .box {
       max-width: 800px;
@@ -38,7 +42,7 @@
     footer {
       background-color: #000000;
       padding: 20px;
-      font-size: 14px;
+      font-size: 25px;
       color: #aaaaaa;
     }
   </style>
@@ -49,7 +53,13 @@
   <header>
     <h1>FOUR GARAGE RACING</h1>
     <h2>ปราณีต รวดเร็ว และตรงต่อเวลา คือบริการของเรา</h2>
+<h3>Where is Four Garage?</h3>
+	<p>
+23 ซอยนาคนิวาศ 16 แขวงลาดพร้าว เขตลาดพร้าว กทม. 10230 
+	</p>
+<img src="maps.jpg" width="400">
   </header>
+
 
   <section>
     <div class="box">
@@ -73,6 +83,34 @@
 	ด้วยความเอาใจใส่ ดูแล และควบคุม ทำให้ผลงานและคุณภาพสามารถการันตีได้ <br>
 	บริการแต่งสี พ่นสี เปลี่ยนแปลงสีรถยนต์ เพื่อสีที่กลมกลืนเหมือนเดิม คุณภาพสีชั้นเยี่ยม 2K เครื่องดึงตัวถังที่มีประสิทธิภาพสูง (JIG) <br>
 	สามารถซ่อมแซมตัวถังหรือช่วงล่าง ให้คืนสู่สภาพเดิม ตามความพอใจของลูกค้า <br>
+
+      </p>
+    </div>
+  </section>
+
+  <section>
+    <div class="box">
+      <h5>ตัวอย่างผลงาน จากประสบการณ์กว่า 20 ปี </h5>
+      <p>
+<div class="gallery">
+<img src="car1.jpg" width="500">
+<img src="car2.jpg" width="500">
+<img src="car3.jpg" width="500">
+<img src="car4.jpg" width="500">
+<img src="car5.jpg" width="500">
+       </div>
+<style>
+.gallery {
+  display: flex;
+justify-content: center;
+  gap: 15px;      
+}
+
+.gallery img {
+  width: 250px;
+border-radius: 8px;
+}
+</style>
 
       </p>
     </div>
@@ -110,6 +148,7 @@
       </p>
     </div>
   </section>
+
 
   <footer>
     © 2025 Four Garage Racing
